# msquic-tokio

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  bindings.txt
.github/workflows/: build.yaml
.metadata/: MsQuic.c  generate.proj
.windows/winmd/: Microsoft.MsQuic.winmd
crates/libs/c/: Cargo.toml  build.rs  features.json
crates/libs/c/src/: Microsoft.rs  lib.rs  unix_status.rs  win_status.rs
crates/libs/c/src/Microsoft/: mod.rs
crates/libs/c/src/Microsoft/MsQuic/: mod.rs
crates/libs/c2/: Cargo.toml
crates/libs/c2/src/: lib.rs
crates/libs/msquic/: Cargo.toml
crates/libs/msquic-h3/: Cargo.toml
crates/libs/msquic-h3/src/: buffer.rs  config.rs  conn.rs  lib.rs  listener.rs  reg.rs  stream.rs  sync.rs
crates/libs/msquic-h3/src/core/: api.rs  buffer.rs  config.rs  conn.rs  listener.rs  mod.rs  reg.rs  stream.rs  sync.rs  utils.rs
crates/libs/msquic-h3/src/msh3/: mod.rs  tests.rs
crates/libs/msquic-rs/: Cargo.toml
crates/libs/msquic-rs/src/: Microsoft.rs  lib.rs  load.rs
crates/libs/msquic-sys/: Cargo.toml  README.md  build.rs
crates/libs/msquic-sys/src/: Microsoft.rs  lib.rs  win_status.rs
crates/libs/msquic-sys2/: Cargo.toml  README.md  build.rs
crates/libs/msquic-sys2/src/: lib.rs
crates/libs/msquic/src/: buffer.rs  config.rs  conn.rs  lib.rs  listener.rs  reg.rs  stream.rs  sync.rs  utils.rs
crates/libs/msquic/src/msh3/: mod.rs  tests.rs
crates/samples/simple/: Cargo.toml
crates/samples/simple/src/: lib.rs
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
docs/: Development.md
include/: msquic.h
