[package]
name = "msquic-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# need win foundataion because of BOOLEAN.
# need winsock due to addr def.
[dependencies]
windows-core = "0.57.0"
windows = { version = "0.57.0", features = [ "Win32_Foundation", "Win32_Networking_WinSock"]}
mssf-pal = "0"
libloading = "0.8"
lazy_static = "1"

[features]
Foundation = []
#Win32_Foundation = []
#Win32_Networking_WinSock = []
# generated features
MsQuic = ["Foundation"]
