[package]
name = "msquic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"c2" = {path = "../c2"}
"hex" = "0.4"
tokio = {version = "1", features = ["sync", "rt"]}
tracing = { version = "0.1", features = ["log"] }
bytes = "*"
h3 = "0.0.6"


[dev-dependencies]
tokio = {version = "1", features = ["full"]}
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"]}
http = "*"
smol = { version = "2" }

[features]
default = []
trace = []