[package]
name = "simple"
version = "0.1.0"
edition = "2021"
description =  "Example of using the generated MsQuic binding from winmd"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8"
"msquic-rs" = { version = "*", path = "../../libs/msquic-rs", features = ["MsQuic"]}
"windows-core" = "0.57.0"
